--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,5 +40,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.afollestad:easyvideoplayer:0.3.0'
+    compile 'uk.co.chrisjenx:calligraphy:2.3.0'
+    compile 'com.futuremind.recyclerfastscroll:fastscroll:0.2.5'
+
     testCompile 'junit:junit:4.12'
 }
